--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Map Sharing</title>
   </head>
-  <body>
+  <body class="bg-slate-100 dark:bg-slate-800 text-slate-900 dark:text-slate-100">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
